// Copyright (c) XJ Music Inc. (https://xj.io) All Rights Reserved.

plugins {
  id 'java'
  id 'java-test-fixtures'
  id 'application'
  id 'distribution'
  //
  id 'com.google.cloud.tools.jib'
  id 'de.undercouch.download'
  id 'io.spring.dependency-management'
  id 'org.ajoberstar.grgit'
  id 'org.flywaydb.flyway'
  id 'org.springframework.boot'
}

group = 'io.xj'
version = '1.0'
sourceCompatibility = '17'
description = 'XJ music platform backend services'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

apply plugin: 'java'

repositories {
  mavenLocal()
  maven {
    url = 'https://repo.maven.apache.org/maven2'
  }
  maven {
    url = 'https://packages.confluent.io/maven/'
  }
}

dependencies {
  implementation project(":hub")
  implementation project(":lib")
  testImplementation(testFixtures(project(":hub")))
  testImplementation(testFixtures(project(":nexus")))
  testFixturesImplementation(project(":lib"))
  testFixturesImplementation(project(":hub"))
  testFixturesImplementation(project(":lib"))
  testFixturesImplementation(testFixtures(project(":hub")))
  testImplementation(project(':lib').sourceSets.test.output)
  testImplementation(testFixtures(project(":hub")))
  //
  implementation "com.fasterxml.jackson.core:jackson-annotations:${rootProject.ext.jacksonAnnotationsVersion}"
  implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${rootProject.ext.jacksonAnnotationsVersion}"
  implementation "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:${rootProject.ext.jacksonAnnotationsVersion}"
  implementation "com.google.guava:guava:31.1-jre" // to resolve an incompatibility with transitive guava deps from other google libraries
  implementation "org.springframework.boot:spring-boot-starter-web:${rootProject.ext.springBootVersion}"
  implementation 'ch.qos.logback:logback-classic:1.2.6'
  implementation 'com.github.axet:TarsosDSP:2.4-1'
  implementation 'com.github.rholder:snowball-stemmer:1.3.0.581.1'
  implementation 'com.github.trilarion:java-vorbis-support:1.2.1'
  implementation 'com.typesafe:config:1.4.1'
  implementation 'com.zaxxer:HikariCP:5.0.0'
  implementation 'commons-codec:commons-codec:1.5'
  implementation 'commons-io:commons-io:2.11.0'
  implementation 'javax.activation:activation:1.1.1'
  implementation 'javax.annotation:javax.annotation-api:1.3.2'
  implementation 'javax.cache:cache-api:1.1.1'
  implementation 'javax.validation:validation-api:2.0.1.Final'
  implementation 'javax.ws.rs:javax.ws.rs-api:2.1.1'
  implementation 'me.xdrop:fuzzywuzzy:1.3.1'
  implementation 'net.logstash.logback:logstash-logback-encoder:6.6'
  implementation 'org.apache.httpcomponents:httpclient:4.5.13'
  implementation 'org.jooq:jooq:3.15.2'
  implementation 'org.json:json:20210307'
  implementation 'org.mp4parser:isoparser:1.9.41'
  implementation 'org.mp4parser:muxer:1.9.41'
  implementation 'org.mp4parser:streaming:1.9.41'
  implementation 'org.reflections:reflections:0.10.1'
  implementation 'org.slf4j:log4j-over-slf4j:1.7.32'
  implementation 'org.slf4j:slf4j-api:1.7.32'
  implementation 'org.yaml:snakeyaml:1.33'
  testFixturesImplementation 'com.typesafe:config:1.4.1'
  testFixturesImplementation 'org.jooq:jooq:3.15.2'
  testFixturesImplementation 'org.slf4j:slf4j-api:1.7.32'
  testImplementation "com.google.guava:guava:31.1-jre" // to resolve an incompatibility with transitive guava deps from other google libraries
  testImplementation "org.springframework.boot:spring-boot-starter-test:${rootProject.ext.springBootVersion}"
  testImplementation 'com.github.tomakehurst:wiremock-jre8:2.31.0'
  testImplementation 'junit:junit:4.13.2'
  testImplementation 'org.assertj:assertj-core:3.21.0'
  testImplementation 'org.hamcrest:hamcrest-library:2.2'
  testImplementation 'org.mockito:mockito-core:4.0.0'
}

jar {
  manifest {
    attributes 'Main-Class': 'io.xj.nexus.NexusApplication'
  }
}

application {
  mainClassName = 'io.xj.nexus.NexusApplication'
}

java {
  sourceCompatibility = JavaVersion.VERSION_17
  targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

// Ship to multiple repositories https://www.pivotaltracker.com/story/show/180684409
jib {
  container.jvmFlags = ["-Djava.library.path=/usr/lib/x86_64-linux-gnu", "-Xmx3500m"]
  // set from CI command: (for building and pushing the image to multiple repositories)
  from.image = project.jibFromImage
  to.image = project.jibToImageRegistry + '/' + name
}

